--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.android.cars.places'
+    namespace 'com.gladysassistant.android.auto'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.android.cars.places"
+        applicationId "com.gladysassistant.android.auto"
         minSdk 23
         targetSdk 33
         versionCode 1
@@ -79,7 +79,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.1"
     debugImplementation "androidx.compose.ui:ui-tooling"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
 }
