--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Places">
+        android:theme="@style/Theme.Gladys">
 
         <meta-data
             android:name="com.google.android.gms.car.application"
@@ -32,7 +32,7 @@
         <activity
             android:name="com.gladysassistant.android.auto.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Places">
+            android:theme="@style/Theme.Gladys">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
