--- a/common/car-app-service/build.gradle
+++ b/common/car-app-service/build.gradle
@@ -49,6 +49,9 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation "androidx.car.app:app:$car_app_library_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
     implementation project(":common:data")
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
