--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ buildscript {
         compose_bom = '2023.04.01'
         // All versions can be found at https://developer.android.com/jetpack/androidx/releases/car-app
         car_app_library_version = '1.3.0-rc01'
+
+        hilt_version = '2.28-alpha'
+    }
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
@@ -27,4 +33,7 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+}
+
+dependencies {
 }
