--- a/common/car-app-service/build.gradle
+++ b/common/car-app-service/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation project(":common:data")
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
