--- a/common/data/build.gradle
+++ b/common/data/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'androidx.core:core-ktx:1.10.0'
+    implementation "androidx.car.app:app:$car_app_library_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
