--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ buildscript {
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.1.1'
     }
 }
 
